configuration/documentation for using another OpenSearch cluster rather than local docker (idaholab/Malcolm#10)
Squashed commit of the following:

commit 6f0cce67959337a05ef2a411d592528b7b6e293f
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Aug 22 14:33:19 2022 -0600

    README updates

commit b70154b2207771ab1652f1784801ceaa68bef4c3
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Aug 22 13:40:20 2022 -0600

    tweaks to install.py for opensearch URL stuff

commit 967426086884a019449429ae62e7879468b9e318
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Mon Aug 22 11:49:41 2022 -0600

    Quiet message from arkime

commit a67b1bdc2332278f7d912592cb4a7410bca16067
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:44:14 2022 -0600

    proxy opensearch creds through dashboards for importing

commit 051ec1a4e96b8363618d9981b0a8d1938ac0e3b2
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:27:01 2022 -0600

    import requests.auth

commit 3c65c1a1e685d7b1db679c43ef3a392553a9e173
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:25:49 2022 -0600

    bump to v6.3.0

commit 4248e401955387db465bbc56fb483da24fd44558
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:22:39 2022 -0600

    proxy opensearch creds through dashboards for importing

commit e7677dc7c21c5c5a573eb895c6d512e5e9da10a3
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:17:01 2022 -0600

    don't fail on some dashboards setup

commit b9dd113ab68899129715f031f7cceeb81b4a6498
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 13:01:06 2022 -0600

    set permissions on files containing secrets

commit 9fe37b1540cb715a7e4c66efa339c346d9056076
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 12:43:58 2022 -0600

    fix logstash startup

commit 018a146de471dee2e27886f6af2c70e63b4490a4
Author: SG <mero.mero.guero@gmail.com>
Date:   Fri Aug 19 12:42:56 2022 -0600

    fix arkime and dashbaords startup

comm

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -43,7 +43,43 @@ x-ssl-variables: &ssl-variables
 
 x-opensearch-variables: &opensearch-variables
   # Used in various services to define the connection to the OpenSearch document store.
+  # Whether or not Malcolm will start and use its own local OpenSearch instance as its
+  #   primary data store. Set to 'false' if you're connecting to another OpenSearch
+  #   cluster, in which case the other environment variables in this section must also
+  #   be set with the connection parameters.
+  OPENSEARCH_LOCAL : 'true'
+  # URL for connecting to OpenSearch instance. When using Malcolm's internal instance
+  #   of OpenSearch (i.e., OPENSEARCH_LOCAL is 'true') this should be
+  #   'http://opensearch:9200', otherwise specify the primary remote instance URL
+  #   in the format 'protocol://host:port'.
   OPENSEARCH_URL : 'http://opensearch:9200'
+  # Used when OPENSEARCH_LOCAL is 'false', the cURL-formatted config file contains login
+  #   credentials for the primary OpenSearch instance. It can be generated for you by the
+  #   ./scripts/auth_setup script. The notable parameters expected from this file would be
+  #   user (with a "user:password" value) and "insecure" (if the certificate verification
+  #   setting below is 'false'). See cURL config file format at
+  #   https://everything.curl.dev/cmdline/configfile. This file is bind mounted locally
+  #   from .opensearch.primary.curlrc as /var/local/opensearch.primary.curlrc
+  OPENSEARCH_CREDS_CONFIG_FILE : '/var/local/opensearch.primary.curlrc'
+  # Whether or not connections to the primary remote OpenSearch instance require full
+  #  TLS certificate validation for the connection (this may fail if using self-signed
+  #  certificates).
+  OPENSEARCH_SSL_CERTIFICATE_VERIFICATION : 'false'
+  # Whether or not Malcolm's Logstash instance will forward logs to a secondary remote
+  #   OpenSearch instance in addition to the (local or remote) primary instance.
+  OPENSEARCH_SECONDARY : 'false'
+  # URL for connecting to the secondary remote OpenSearch instance, specified
+  #   in the format 'protocol://host:port'.
+  OPENSEARCH_SECONDARY_URL : ''
+  # Used when OPENSEARCH_SECONDARY is 'true', the cURL-formatted config file contains login
+  #   credentials for the secondary OpenSearch instance. The comments describing
+  #   OPENSEARCH_CREDS_CONFIG_FILE above also apply here. This file is bind mounted locally
+  #   from .opensearch.secondary.curlrc as /var/local/opensearch.secondary.curlrc
+  OPENSEARCH_SECONDARY_CREDS_CONFIG_FILE : '/var/local/opensearch.secondary.curlrc'
+  # Whether or not connections to the secondary remote OpenSearch instance require full
+  #  TLS certificate validation for the connection (this may fail if using self-signed
+  #  certificates).
+  OPENSEARCH_SECONDARY_SSL_CERTIFICATE_VERIFICATION : 'false'
 
 x-arkime-variables: &arkime-variables
   # Whether or not Arkime is allowed to delete uploaded/captured PCAP (see
@@ -195,19 +231,6 @@ x-logstash-variables: &logstash-variables
   LOGSTASH_SEVERITY_SCORING : 'true'
   # Whether or not Logstash will perform a reverse DNS lookup for external IP addresses
   LOGSTASH_REVERSE_DNS      : 'false'
-  # If specified (in the format '10.0.0.123:9200'), logs received by Logstash will be
-  #   forwarded on to another external OpenSearch instance in addition to the one
-  #   maintained locally by Malcolm
-  OS_EXTERNAL_HOSTS : ''
-  # Whether or not Logstash will use HTTPS for the connection to OS_EXTERNAL_HOSTS
-  OS_EXTERNAL_SSL : 'true'
-  # Whether or not Logstash will require full TLS certificate validation for the connection
-  #   to OS_EXTERNAL_HOSTS (this may fail if using self-signed certificates)
-  OS_EXTERNAL_SSL_CERTIFICATE_VERIFICATION : 'false'
-  # For security, OS_EXTERNAL_USER and OS_EXTERNAL_PASSWORD should be stored in Logstash keystore using ./scripts/auth_setup
-  #   See also volume mount for logstash.keystore below.
-  # OS_EXTERNAL_USER : 'janedoe'
-  # OS_EXTERNAL_PASSWORD : 'secret'
 
 x-filebeat-variables: &filebeat-variables
   # filebeat parameters used for monitoring log files containing network traffic metadata
@@ -311,7 +334,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   opensearch:
-    image: malcolmnetsec/opensearch:6.2.1
+    image: malcolmnetsec/opensearch:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -321,6 +344,7 @@ services:
     environment:
       << : *process-variables
       << : *ssl-variables
+      << : *opensearch-variables
       logger.level : 'WARN'
       bootstrap.memory_lock : 'true'
       MAX_LOCKED_MEMORY : 'unlimited'
@@ -341,6 +365,8 @@ services:
       - IPC_LOCK
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
       - ./opensearch/opensearch.keystore:/usr/share/opensearch/config/opensearch.keystore:rw
       - ./opensearch:/usr/share/opensearch/data:delegated
       - ./opensearch-backup:/opt/opensearch/backup:delegated
@@ -351,7 +377,7 @@ services:
       retries: 3
       start_period: 180s
   dashboards-helper:
-    image: malcolmnetsec/dashboards-helper:6.2.1
+    image: malcolmnetsec/dashboards-helper:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -375,6 +401,7 @@ services:
       - 28991
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
     healthcheck:
       test: ["CMD", "supervisorctl", "status", "cron", "maps"]
       interval: 60s
@@ -382,7 +409,7 @@ services:
       retries: 3
       start_period: 30s
   dashboards:
-    image: malcolmnetsec/dashboards:6.2.1
+    image: malcolmnetsec/dashboards:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -401,6 +428,7 @@ services:
       - 5601
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/dashboards/api/status"]
       interval: 30s
@@ -408,7 +436,7 @@ services:
       retries: 3
       start_period: 210s
   logstash:
-    image: malcolmnetsec/logstash-oss:6.2.1
+    image: malcolmnetsec/logstash-oss:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -439,8 +467,9 @@ services:
       - "127.0.0.1:5044:5044"
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
+      - ./.opensearch.secondary.curlrc:/var/local/opensearch.secondary.curlrc:ro
       - ./logstash/maps/malcolm_severity.yaml:/etc/malcolm_severity.yaml:ro
-      - ./logstash/certs/logstash.keystore:/usr/share/logstash/config/logstash.keystore:rw
       - ./logstash/certs/ca.crt:/certs/ca.crt:ro
       - ./logstash/certs/server.crt:/certs/server.crt:ro
       - ./logstash/certs/server.key:/certs/server.key:ro
@@ -454,7 +483,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:6.2.1
+    image: malcolmnetsec/filebeat-oss:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -481,6 +510,7 @@ services:
       - "127.0.0.1:5045:5045"
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
       - nginx-log-path:/nginx:ro
       - ./zeek-logs:/zeek
       - ./suricata-logs:/suricata
@@ -494,7 +524,7 @@ services:
       retries: 3
       start_period: 60s
   arkime:
-    image: malcolmnetsec/arkime:6.2.1
+    image: malcolmnetsec/arkime:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -525,6 +555,7 @@ services:
       - 8081
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
       - ./pcap:/data/pcap
       - ./arkime-logs:/opt/arkime/logs
       - ./arkime-raw:/opt/arkime/raw
@@ -535,7 +566,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:6.2.1
+    image: malcolmnetsec/zeek:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -574,7 +605,7 @@ services:
       retries: 3
       start_period: 60s
   zeek-live:
-    image: malcolmnetsec/zeek:6.2.1
+    image: malcolmnetsec/zeek:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -606,7 +637,7 @@ services:
       - ./zeek-logs/extract_files:/zeek/extract_files
       - ./zeek/intel:/opt/zeek/share/zeek/site/intel
   suricata:
-    image: malcolmnetsec/suricata:6.2.1
+    image: malcolmnetsec/suricata:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -643,7 +674,7 @@ services:
       retries: 3
       start_period: 120s
   suricata-live:
-    image: malcolmnetsec/suricata:6.2.1
+    image: malcolmnetsec/suricata:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -670,7 +701,7 @@ services:
       - ./suricata-logs:/var/log/suricata
       - ./suricata/rules:/opt/suricata/rules:ro
   file-monitor:
-    image: malcolmnetsec/file-monitor:6.2.1
+    image: malcolmnetsec/file-monitor:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -697,7 +728,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:6.2.1
+    image: malcolmnetsec/pcap-capture:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -719,7 +750,7 @@ services:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:6.2.1
+    image: malcolmnetsec/pcap-monitor:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -737,6 +768,7 @@ services:
       - 30441
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
       - ./zeek-logs:/zeek
       - ./pcap:/pcap
     healthcheck:
@@ -746,7 +778,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:6.2.1
+    image: malcolmnetsec/file-upload:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -776,7 +808,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:6.2.1
+    image: malcolmnetsec/htadmin:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -802,7 +834,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:6.2.1
+    image: malcolmnetsec/freq:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -825,7 +857,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:6.2.1
+    image: malcolmnetsec/name-map-ui:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -850,7 +882,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:6.2.1
+    image: malcolmnetsec/api:6.3.0
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -867,6 +899,7 @@ services:
       - 5000
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
+      - ./.opensearch.primary.curlrc:/var/local/opensearch.primary.curlrc:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5000/ping"]
       interval: 30s
@@ -874,7 +907,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:6.2.1
+    image: malcolmnetsec/nginx-proxy:6.3.0
     restart: "no"
     stdin_open: false
     tty: true
