work in progress on updating opcua-binary fields

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1,5 +1,8 @@
 filter {
 
+  # TODO: normalize all of these new OPC UA Binary Logs
+
+
   # Zeek intel indicators depending on indicator type #################################################################
   if ([zeek][intel][seen_indicator]) and ([zeek][intel][seen_indicator_type]) {
 
