--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -175,6 +175,58 @@ filter {
     }
   }
 
+  if ([zeek][opcua_binary_create_session][req_session_timeout]) {
+    if ([zeek][opcua_binary_create_session][req_session_timeout] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_req_session_timeout_zero"
+               remove_field => [ "[zeek][opcua_binary_create_session][req_session_timeout]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_create_session_req_session_timeout"
+        match => [ "[zeek][opcua_binary_create_session][req_session_timeout]", "UNIX" ]
+        target => "[zeek][opcua_binary_create_session][req_session_timeout]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary_create_session][revised_session_timeout]) {
+    if ([zeek][opcua_binary_create_session][revised_session_timeout] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_revised_session_timeout_zero"
+               remove_field => [ "[zeek][opcua_binary_create_session][revised_session_timeout]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_create_session_revised_session_timeout"
+        match => [ "[zeek][opcua_binary_create_session][revised_session_timeout]", "UNIX" ]
+        target => "[zeek][opcua_binary_create_session][revised_session_timeout]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary_create_subscription][requested_publishing_interval]) {
+    if ([zeek][opcua_binary_create_subscription][requested_publishing_interval] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_create_subscription_requested_publishing_interval_zero"
+               remove_field => [ "[zeek][opcua_binary_create_subscription][requested_publishing_interval]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_create_subscription_requested_publishing_interval"
+        match => [ "[zeek][opcua_binary_create_subscription][requested_publishing_interval]", "UNIX" ]
+        target => "[zeek][opcua_binary_create_subscription][requested_publishing_interval]"
+      }
+    }
+  }
+
+  if ([zeek][opcua_binary_create_subscription][revised_publishing_interval]) {
+    if ([zeek][opcua_binary_create_subscription][revised_publishing_interval] == "0.000000") {
+      mutate { id => "mutate_remove_field_zeek_opcua_binary_create_subscription_revised_publishing_interval_zero"
+               remove_field => [ "[zeek][opcua_binary_create_subscription][revised_publishing_interval]" ] }
+    } else {
+      date {
+        id => "date_zeek_opcua_binary_create_subscription_revised_publishing_interval"
+        match => [ "[zeek][opcua_binary_create_subscription][revised_publishing_interval]", "UNIX" ]
+        target => "[zeek][opcua_binary_create_subscription][revised_publishing_interval]"
+      }
+    }
+  }
+
   if ([zeek][opcua_binary_opensecure_channel][sec_token_created_at]) {
     if ([zeek][opcua_binary_opensecure_channel][sec_token_created_at] == "0.000000") {
       mutate { id => "mutate_remove_field_zeek_opcua_binary_opensecure_channel_sec_token_created_at_zero"
