work in progress on updating opcua-binary fields

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5560,17 +5560,6 @@ filter {
     #############################################################################################################################
     # opcua-binary-*.log specific logic
 
-    # count the number of contributing log types before we rename stuff
-    ruby {
-        id => "ruby_zeek_opcua_binary_log_types"
-        code => "
-            zeekHash = event.get('[zeek]')
-            if !zeekHash.nil? && zeekHash.is_a?(Hash) then
-              event.set('[zeek][opcua_binary][log_types]', zeekHash.count { |_, v| v.is_a?(Hash) })
-            end
-        "
-    }
-
     # There is a lot of linking between various different field types to tie logs together,
     #   see https://github.com/cisagov/icsnpp-opcua-binary/tree/main/scripts.
     # We want to rename these fields as much as possible in order to have them cofilterable.
@@ -5604,6 +5593,17 @@ filter {
       rename => { "[zeek][opcua_binary_get_endpoints][profile_uri_id]" => "[zeek][opcua_binary_get_endpoints_profile_uri][profile_uri_id]" }
       rename => { "[zeek][opcua_binary_get_endpoints_description][discovery_profile_id]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_id]" }
       rename => { "[zeek][opcua_binary_get_endpoints_description][user_token_id]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_id]" }
+    }
+
+    # count the number of contributing "log types" after we've renamed stuff
+    ruby {
+        id => "ruby_zeek_opcua_binary_log_types"
+        code => "
+            zeekHash = event.get('[zeek]')
+            if !zeekHash.nil? && zeekHash.is_a?(Hash) then
+              event.set('[zeek][opcua_binary][log_types]', zeekHash.count { |_, v| v.is_a?(Hash) })
+            end
+        "
     }
 
   } else if ([log_source] == "ospf") {
