group all is_orig fields under network

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4330,6 +4330,7 @@ filter {
     rename => { "[zeek][%{[log_source]}][ts]"              => "[zeek][ts]" }
     rename => { "[zeek][%{[log_source]}][uid]"             => "[zeek][uid]" }
     rename => { "[zeek][%{[log_source]}][fuid]"            => "[zeek][fuid]" }
+    rename => { "[zeek][%{[log_source]}][is_orig]"         => "[network][is_orig]" }
     rename => { "[zeek][%{[log_source]}][orig_h]"          => "[source][ip]" }
     rename => { "[zeek][%{[log_source]}][orig_p]"          => "[source][port]" }
     rename => { "[zeek][%{[log_source]}][orig_l2_addr]"    => "[source][mac]" }
